--- a/words/templates/words/index.html
+++ b/words/templates/words/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>Hello words in index.html</h1>
     {% for voc in vocab %}
-        <h1>{{ voc.name }}</h1>
-        <p>noun meaning {{ voc.noun }} action {{ voc.verb }} expression {{ voc.adjective }}</p>
+        <h1>{{ voc.player }}</h1>
+        <p>noun meaning {{ voc.noun }} action {{ voc.define }} expression {{ voc.date_posted|date:"F d, Y" }}</p>
     {% endfor %}
 {% endblock content %}
