--- a/words/templates/words/base.html
+++ b/words/templates/words/base.html
@@ -13,7 +13,7 @@
     <!-- Custom css -->
     <link rel="stylesheet" type = "text/css" href="{% static 'words/main.css' %}">
     {% if title %}
-        <title>worddddd {{ title }}</title>
+        <title>word{{ title }}</title>
     {% else %}
         <title> words play</title>
     {% endif %}
@@ -29,17 +29,23 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'words-index' %}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="{% url 'words-about' %}">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
+          {% if user.is_authenticated %}
+              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">LogIn</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">Register</a>
+              </li>
+          {% endif %}
+
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -47,6 +53,21 @@
         </form>
       </div>
     </nav>
+    <!-- Side Bar -->
+    <!-- <div class="col-md-4">
+      <div class="content-section">
+        <h3>Our Sidebar</h3>
+        <p class='text-muted'>You can put any information here you'd like.
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-light">Latest Posts</li>
+            <li class="list-group-item list-group-item-light">Announcements</li>
+            <li class="list-group-item list-group-item-light">Calendars</li>
+            <li class="list-group-item list-group-item-light">etc</li>
+          </ul>
+        </p>
+      </div>
+    </div> -->
+    <!-- Posts -->
     <div class="container">
         {% if messages %}
             {% for message in messages%}
