--- a/words/static/words/main.css
+++ b/words/static/words/main.css
@@ -11,6 +11,10 @@ h1 {
     justify-content: flex-start;
 }
 
-/* .container {
-    margin-right: -500px;
-} */
+.content-section {
+  background: #ffffff;
+  padding: 10px 20px;
+  border: 1px solid #dddddd;
+  border-radius: 1px;
+  margin-bottom: 20px;
+}
