--- a/words/templates/words/index.html
+++ b/words/templates/words/index.html
@@ -10,7 +10,7 @@
                 <h1>{{ voc.player }}</h1>
                 <p>noun meaning {{ voc.noun }} action {{ voc.define }} expression {{ voc.date_posted|date:"F d, Y" }}</p>
             {% endfor %} -->
-          <a class="mr-2" href="#">{{ voc.player }}</a>
+          <a class="mr-2" href="{% url 'words-detail' voc.id %}">{{ voc.player }}</a>
           <small class="text-muted">{{ voc.noun }}</small>
         </div>
     <h2><a class="article-title" href="#">{{ voc.define }}</a></h2>
