--- a/words/templates/words/base.html
+++ b/words/templates/words/base.html
@@ -35,6 +35,7 @@
             <a class="nav-link" href="{% url 'words-about' %}">About</a>
           </li>
           {% if user.is_authenticated %}
+              <a class="nav-link" href="{% url 'words-create' %}">New Word</a>
               <a class="nav-link" href="{% url 'profile' %}">Profile</a>
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           {% else %}
