--- a/words/static/words/main.css
+++ b/words/static/words/main.css
@@ -1,6 +1,10 @@
 body {
     background: black;
 }
+.navbar_color {
+    /* color: pink; */
+    background-color: pink;
+}
 
 h1 {
     color: pink;
