--- a/words/templates/words/base.html
+++ b/words/templates/words/base.html
@@ -9,9 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <!-- Bootswatch -->
-    <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css">
     <!-- Custom css -->
     <link rel="stylesheet" type = "text/css" href="{% static 'words/main.css' %}">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/33d47a7151.js" crossorigin="anonymous"></script>
+
     {% if title %}
         <title>word{{ title }}</title>
     {% else %}
@@ -20,8 +23,8 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar_color">
+      <a class="navbar-brand" href="#"><i class="fas fa-school"></i>WordPlay</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
